build: bump source/target from Java 8 to Java 21
Switch maven-compiler-plugin to <release>21</release> (and bump the
plugin itself 3.1 → 3.13.0 — the old version is older than Java 21).
Replace the deprecated-for-removal new Integer(String) at SynthPi.java
with Integer.valueOf to clear the only resulting warning.

No other source changes needed. Verified the headless audio path starts
cleanly under Java 21: Jetty 9.3, logback 1.1, jnajack/JNA, and
JavaSound all work with no module-access or reflection fallout.

Eclipse project files updated in lockstep.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>